finally finally finally fixed the flexbox for the image. I accidentally had 20px on the value for left and right for flex gap rather than top and bottom

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -144,7 +144,7 @@ main {
 #gallery {
     display: flex;
     flex-wrap: wrap;
-    gap: 0px 20px;
+    gap: 12px 0px;
     justify-content: space-between;
 }
 
